@@ -327,4 +327,5 @@
 - suppressed warnings by adding casts to (IPTR) and setting initial values
   for variables
 - implemented (earlier)
+- implemented (getdiskspace)
 
